--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="/spotifysearch/inline.js"></script><script type="text/javascript" src="/spotifysearch/styles.c1fb5924cdcebe5b9288.bundle.js"></script><script type="text/javascript" src="/spotifysearch/main.5a3ece4a0b8dd6ba9c13.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.c1fb5924cdcebe5b9288.bundle.js"></script><script type="text/javascript" src="main.5a3ece4a0b8dd6ba9c13.bundle.js"></script></body>
 </html>
